Change ticket management to GitHub

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -87,7 +87,7 @@
           </li>
 
           <li>
-            <a href="https://bitbucket.org/versioneye/versioneye/issues" title="Feedback" id="feedback_link" target="TICKETS">
+            <a href="https://github.com/versioneye/versioneye/issues" title="Feedback" id="feedback_link" target="TICKETS">
               <i class="fa fa-comment"></i>
             </a>
           </li>
