--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -7,7 +7,7 @@
     <a href="/faq">FAQs</a> |
     <a href="/documentation">Documentation</a> |
     <%= link_to t(:page_footer_statistics), statistics_path %> |
-    <a href="https://bitbucket.org/versioneye/versioneye/issues" id="feedback_footer" target="issue_tracker_74" >Feedback</a> |
+    <a href="https://github.com/versioneye/versioneye/issues" id="feedback_footer" target="issue_tracker_74" >Feedback</a> |
     <a href="http://blog.versioneye.com/" target="versioneye_blog">Blog</a> |
     <a href="/api" >API</a>
   </div>
@@ -52,6 +52,7 @@
     <a href="/clojure" >Clojure</a> |
     <a href="/r" >R</a> |
     <a href="/rust" >Rust</a> |
+    <a href="/elixir" >Elixir</a> |
     <a href="/chef" >Chef</a>
   </div>
 
