Add Hex to the supported package managers.

--- a/app/views/shared/_feature_package_managers.html.erb
+++ b/app/views/shared/_feature_package_managers.html.erb
@@ -31,6 +31,7 @@
             <li><a href="https://crates.io/">Cargo</a> (Rust)</li>
             <li><a href="https://www.biicode.com/">Biicode</a> (C/C++)</li>
             <li><a href="http://berkshelf.com/">Berkshelf</a> (Chef)</li>
+            <li><a href="https://hex.pm/">Hex</a> (Elixir)</li>
         </ul>
 
         <p class="lead" style="padding-top: 10px;">
