Update link to Gradle

--- a/app/views/shared/_feature_package_managers.html.erb
+++ b/app/views/shared/_feature_package_managers.html.erb
@@ -25,7 +25,7 @@
             <li><a href="http://cocoapods.org/">CocoaPods</a> (Objective-C)</li>
             <li><a href="http://maven.apache.org/">Maven</a> (Java)</li>
             <li><a href="http://www.scala-sbt.org/">SBT</a> (Scala)</li>
-            <li><a href="http://www.gradleware.com/">Gradle</a> (Groovy)</li>
+            <li><a href="https://gradle.org">Gradle</a> (Groovy)</li>
             <li><a href="http://leiningen.org/">Leiningen</a> (Clojure)</li>
             <li><a href="https://www.nuget.org/">Nuget</a> (Microsoft .NET platform)</li>
             <li><a href="https://crates.io/">Cargo</a> (Rust)</li>
