--- a/app/views/products/_product_show_dependencies.html.erb
+++ b/app/views/products/_product_show_dependencies.html.erb
@@ -16,7 +16,8 @@
       "#{Project::A_TYPE_BIICODE}"   => 'product_show_dependencies_biicode',
       "#{Project::A_TYPE_CHEF}"      => 'product_show_dependencies_chef',
       "#{Project::A_TYPE_NUGET}"     => 'product_show_dependencies_nuget',
-      "#{Project::A_TYPE_CARGO}"     => 'product_show_dependencies_crates'
+      "#{Project::A_TYPE_CARGO}"     => 'product_show_dependencies_crates',
+      "#{Project::A_TYPE_HEX}"       => 'product_show_dependencies_hex'
     }
 
     partial = partial_map[@product.prod_type]
