Error page for non existing authors

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -38,4 +38,10 @@
     </div>
   </div>
 
+<% else %>
+
+  <div style="text-align: center;">
+    <img src="/assets/grumpy_cat_no.jpg" >
+  </div>
+
 <% end %>
