--- a/app/views/pullrequests/_pr_show_content.html.erb
+++ b/app/views/pullrequests/_pr_show_content.html.erb
@@ -69,7 +69,7 @@
         <td style="padding-right: 5px;">
           <% if issue.security_count.to_i > 0 %>
             <span class="fa fa-shield" style="font-size: 14px; color: red;"></span>
-            <a href="/<%= issue.language %>/<%= issue.prod_key %>/<%= issue.version_requested %>"><%= issue.security_count %></a>
+            <a href="/<%= issue.language %>/<%= Product.encode_prod_key(issue.prod_key) %>/<%= Version.encode_version(issue.version_requested) %>"><%= issue.security_count %></a>
           <% else %>
             0
           <% end %>
