--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -78,6 +78,13 @@
         </div>
 
         <div class="form-group">
+          <%= f.check_box :skip_license_check_on_pr, :style => "vertical-align: top; margin-right: 5px;", :id => "skip_license_check_on_pr", :disabled => disabled_flag %>
+          <label for="skip_license_check_on_pr" style="display: inline; font-size: 12px;">
+            Disable license checks for pull requests.
+          </label>
+        </div>
+
+        <div class="form-group">
           <div class="control-label"></div>
           <div class="controls">
             <%= f.submit :class => "btn btn-large btn-primary", :disabled => disabled_flag %>
