Update input type for proxy password

--- a/app/views/layouts/enterprise_activation.html.erb
+++ b/app/views/layouts/enterprise_activation.html.erb
@@ -68,7 +68,7 @@
                   </tr>
                   <tr>
                     <td style="text-align: right; padding-bottom: 5px;"><label for="proxy_pass" class="control-label">Proxy Password: </label></td>
-                    <td style="padding-bottom: 5px; padding-left: 3px;"><input type="text" autocomplete="off" class="form-control" style="width: 300px; display: inline-block;" id="proxy_pass" name="proxy_pass" placeholder="Proxy Password" /></td>
+                    <td style="padding-bottom: 5px; padding-left: 3px;"><input type="password" autocomplete="off" class="form-control" style="width: 300px; display: inline-block;" id="proxy_pass" name="proxy_pass" placeholder="Proxy Password" /></td>
                   </tr>
                 </table>
 
@@ -88,10 +88,6 @@
 
           </div>
         </div>
-
-
-
-
 
 
         </div>
