--- a/app/views/organisations/plan.html.erb
+++ b/app/views/organisations/plan.html.erb
@@ -41,7 +41,7 @@
           <td><%= os_remain %></td>
         </tr>
         <tr>
-          <td>Components to sync:</td>
+          <td>Components to sync (for Enterprise users):</td>
           <td><%= @organisation.plan.cmp_rate_limit.to_i %></td>
           <td><%= comp_count %></td>
           <td><%= comp_remain %></td>
