--- a/app/views/shared/_auditlog.html.erb
+++ b/app/views/shared/_auditlog.html.erb
@@ -1,6 +1,6 @@
 <% user = audit.user %>
 <b>
-  <%= audit.created_at.strftime("%b %d, %Y - %I:%m %p") %>
+  <%= audit.created_at.strftime("%b %d, %Y - %H:%M") %>
   <% if user %>
     - <%= link_to user.fullname, user_path(user) %>
   <% end %>
