Fix #686 setting timezone

--- a/app/views/lwl_pdf/lwl_pdf_multi.html.erb
+++ b/app/views/lwl_pdf/lwl_pdf_multi.html.erb
@@ -72,7 +72,7 @@
     <div class="container">
 
       <p>
-        <b>Date:</b> <%= DateTime.now.strftime("%b %d, %Y - %I:%m %p") %> <br/>
+        <b>Date:</b> <%= DateTime.now.strftime("%b %d, %Y - %H:%M") %> <br/>
       </p>
 
       <% license_libs = {} %>
