--- a/app/views/sec_pdf/sec_pdf.html.erb
+++ b/app/views/sec_pdf/sec_pdf.html.erb
@@ -74,7 +74,7 @@
       <h1>Security Report for <%= project.name %></h1>
 
       <p>
-        <b>Date:</b> <%= DateTime.now.strftime("%b %d, %Y - %I:%m %p") %> <br/>
+        <b>Date:</b> <%= DateTime.now.strftime("%b %d, %Y - %H:%M") %> <br/>
       </p>
 
       <div>
