--- a/app/views/admin/error_messages/index.html.erb
+++ b/app/views/admin/error_messages/index.html.erb
@@ -1,20 +1,20 @@
 <div class="span1" >
-  
+
   <br/>
   <br/>
-  
-</div>  
+
+</div>
 
 <div class="span10" >
-  
+
   <div >
     <div>
       <h1>Errors</h1>
-    </div>  
+    </div>
     <div class="searchResults">
       <% if !@errors.nil? %>
         <div>
-          <%= @errors.total_entries %> Errors 
+          <%= @errors.total_entries %> Errors
         </div>
         <% @errors.each do |error| %>
           <div class="search-item">
@@ -25,9 +25,9 @@
               <%= error.errormessage %>
             </div>
             <div>
-              <%= error.created_at.strftime("%b %d, %Y - %I:%m %p") %>
+              <%= error.created_at.strftime("%b %d, %Y - %H:%M") %>
             </div>
-          </div>        
+          </div>
         <% end %>
         <div class = "pagination pagination-right pagination-mini" >
           <%= will_paginate @errors %>
