--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -23,7 +23,7 @@
 
           <div class="col-md-11">
             <a href="<%= product_version_path(product, noti.version_id) %>" class="searchResultLink"><span ><%= product.name %>:<%= noti.version_id %></span></a>
-            <span class="meta_prod_description">found at <%= noti.created_at.strftime('%b %d, %Y - %I:%m %p') %></span>
+            <span class="meta_prod_description">found at <%= noti.created_at.in_time_zone(timezone).strftime('%b %d, %Y - %H:%M') %></span>
             <br/>
             <% if product.prod_type == "Maven2" %>
               <span class="group_id_small">GroupId: <%= product.group_id %></span><br/>
