Improve wording on the pricing page

--- a/app/views/organisations/plan.html.erb
+++ b/app/views/organisations/plan.html.erb
@@ -15,6 +15,10 @@
       <span class="label label-default"><%= link_to 'Enterprise Pricing', plan_enterprise_organisation_path(@organisation), :style => "color: white;" %></span>
     </p>
 
+    <p>
+      On the cloud solution we charge per project. As more projects you want to monitor as more you have to pay.
+    </p>
+
     <%= render "pricing" %>
 
     <p>
