Update Perl handling

--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -53,6 +53,7 @@
     <a href="/r" >R</a> |
     <a href="/rust" >Rust</a> |
     <a href="/elixir" >Elixir</a> |
+    <a href="/perl" >Perl</a> |
     <a href="/chef" >Chef</a>
   </div>
 
