--- a/app/views/shared/_feature_package_managers.html.erb
+++ b/app/views/shared/_feature_package_managers.html.erb
@@ -32,6 +32,7 @@
             <li><a href="https://www.biicode.com/">Biicode</a> (C/C++)</li>
             <li><a href="http://berkshelf.com/">Berkshelf</a> (Chef)</li>
             <li><a href="https://hex.pm/">Hex</a> (Elixir)</li>
+            <li><a href="https://www.cpan.org">Cpan</a> (Perl)</li>
         </ul>
 
         <p class="lead" style="padding-top: 10px;">
